[package]
name = "align_text"
version = "0.1.0"
edition = "2021"
authors = ["Khalil Ouali"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
term_size = "0.3.2"
